--- a/index.html
+++ b/index.html
@@ -17,13 +17,27 @@
 
 <body>
    <header>
-
+    
    </header>
    <main>
-
+        <section id="welcome">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                       <div class=""></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
    </main>
    <footer>
-    
+
    </footer>
 </body>
 
