--- a/index.html
+++ b/index.html
@@ -24,12 +24,38 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                       <div class=""></div>
+                       <div class="textbox">
+                            <h1>welcome to our studio</h1>
+                            <h2>IT'S NICE TO MEET YOU</h2>
+                            <div class="btn">
+                                <h6>TELL ME MORE</h6>
+                            </div>
+                       </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section></section>
+        <section id="services">
+            <div class="container">
+                <div class="row">
+                    <div class="textbox">
+                        <h1>SERVICES</h1>
+                        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
