--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="app.js" defer></script>
+    <script src="https://kit.fontawesome.com/d59f47c814.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,21 +17,21 @@
 </head>
 
 <body>
-   <header>
-    
-   </header>
-   <main>
+    <header>
+
+    </header>
+    <main>
         <section id="welcome">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                       <div class="textbox">
+                        <div class="textbox">
                             <h1>welcome to our studio</h1>
                             <h2>IT'S NICE TO MEET YOU</h2>
                             <div class="btn">
                                 <h6>TELL ME MORE</h6>
                             </div>
-                       </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -38,21 +39,40 @@
         <section id="services">
             <div class="container">
                 <div class="row">
-                    <div class="textbox">
-                        <h1>SERVICES</h1>
-                        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-                    </div>
+                    <h1>SERVICES</h1>
+                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-md-4">
-                        <div class="box">
-                            <div class="imgbox">
-                                <img src="" alt="">
-                            </div>
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </div>
+                        <div class="textbox">
+                            <h2>E-Commerce</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
                         </div>
                     </div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-laptop"></i>
+                        </div>
+                        <div class="textbox">
+                            <h2>Responsive Design</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="icon d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-lock"></i>
+                        </div>
+                        <div class="textbox">
+                            <h2>Web Security</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                quo inventore harum ex magni, dicta impedit.</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -61,10 +81,10 @@
         <section></section>
         <section></section>
         <section></section>
-   </main>
-   <footer>
+    </main>
+    <footer>
 
-   </footer>
+    </footer>
 </body>
 
 </html>
