--- a/index.html
+++ b/index.html
@@ -76,7 +76,72 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="box">
+                        <h1>PORTFOLIO</h1>
+                        <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="imgbox">
+                            <img src="assets/11.jpg" alt="">
+                        </div>
+                        <div class="textbox ">
+                            <h2>TREADS</h2>
+                            <h5>Illustration</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+                            <img src="assets/21.jpg" alt="">
+                        </div>
+                        <div class="textbox ">
+                            <h2>EXPLORE</h2>
+                            <h5>Graphic Design</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+                            <img src="assets/31.jpg" alt="">
+                        </div>
+                        <div class="textbox ">
+                            <h2>FINISH</h2>
+                            <h5>Identity</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+                            <img src="assets/41.jpg" alt="">
+                        </div>
+                        <div class="textbox ">
+                            <h2>LINES</h2>
+                            <h5>Branding</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+                            <img src="assets/5.jpg" alt="">
+                        </div>
+                        <div class="textbox ">
+                            <h2>SOUTHWEST</h2>
+                            <h5>Website Design</h5>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+                            <img src="assets/6.jpg" alt="">
+                        </div>
+                        <div class="textbox ">
+                            <h2>Window</h2>
+                            <h5>Photography</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
