--- a/index.html
+++ b/index.html
@@ -142,7 +142,72 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box text-center">
+                            <h1>about</h1>
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex">
+                        <div class="textbox">
+                            <h2>2009-2011
+                                Our Humble Beginnings</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</h4>
+                        </div>
+                        <div class="imgbox ">
+                            <img src="assets/1.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="textbox">
+
+                        </div>
+                        <div class="imgbox ">
+                            <img src="assets/2.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="textbox">
+
+                        </div>
+                        <div class="imgbox ">
+                            <img src="assets/3.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="textbox">
+
+                        </div>
+                        <div class="imgbox ">
+                            <img src="assets/4.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="textbox">
+
+                        </div>
+                        <div class="imgbox">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
