--- a/index.html
+++ b/index.html
@@ -167,19 +167,27 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="textbox">
-
-                        </div>
-                        <div class="imgbox ">
+                    <div class="col-md-12 d-flex txt">
+                        <div class="imgbox">
                             <img src="assets/2.jpg" alt="">
+                        </div>
+                        <div class="textbox">
+                            <h5>March 2011
+                                An Agency is Born</h5>
+                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</h6>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 d-flex">
                         <div class="textbox">
-
+                            <h2>December 2015
+                                Transition to Full Service</h2>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</h4>
                         </div>
                         <div class="imgbox ">
                             <img src="assets/3.jpg" alt="">
@@ -187,12 +195,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="textbox">
-
-                        </div>
+                    <div class="col-md-12 d-flex">
                         <div class="imgbox ">
                             <img src="assets/4.jpg" alt="">
+                        </div>
+                        <div class="textbox">
+                            <h5>July 2020
+                                Phase Two Expansion</h5>
+                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</h6>
                         </div>
                     </div>
                 </div>
