--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box text-center">
-                            <h1>about</h1>
+                            <h1>ABOUT</h1>
                             <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 d-flex">
-                        <div class="textbox">
-                            <h2>2009-2011
-                                Our Humble Beginnings</h2>
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                        <div class="textbox text-end">
+                            <h2>2009-2011</h2>
+                            <h4>Our Humble Beginnings</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
                                 sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</h4>
+                                incidunt et ea quo dolore laudantium consectetur!</p>
                         </div>
                         <div class="imgbox ">
                             <img src="assets/1.jpg" alt="">
@@ -167,27 +167,27 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex txt">
+                    <div class="col-md-12 d-flex margSize">
                         <div class="imgbox">
                             <img src="assets/2.jpg" alt="">
                         </div>
                         <div class="textbox">
-                            <h5>March 2011
-                                An Agency is Born</h5>
-                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                            <h2>March 2011</h2>
+                            <h4>An Agency is Born</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
                                 sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</h6>
+                                incidunt et ea quo dolore laudantium consectetur!</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 d-flex">
-                        <div class="textbox">
-                            <h2>December 2015
-                                Transition to Full Service</h2>
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                        <div class="textbox text-end">
+                            <h2>December 2015</h2>
+                            <h4>Transition to Full Service</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
                                 sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</h4>
+                                incidunt et ea quo dolore laudantium consectetur!</p>
                         </div>
                         <div class="imgbox ">
                             <img src="assets/3.jpg" alt="">
@@ -195,26 +195,23 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex">
+                    <div class="col-md-12 d-flex margSize">
                         <div class="imgbox ">
                             <img src="assets/4.jpg" alt="">
                         </div>
                         <div class="textbox">
-                            <h5>July 2020
-                                Phase Two Expansion</h5>
-                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                            <h2>July 2020</h2>
+                            <h4>Phase Two Expansion</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
                                 sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</h6>
+                                incidunt et ea quo dolore laudantium consectetur!</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="textbox">
-
-                        </div>
-                        <div class="imgbox">
-
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="circle d-flex justify-content-center align-items-center">
+                            <h6>Be part of our story</h6>
                         </div>
                     </div>
                 </div>
