--- a/index.html
+++ b/index.html
@@ -217,7 +217,49 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section id="team">
+            <div class="container">
+                <div class="row">
+                    <div class="textbox text-center">
+                        <h1>OUR AMAZING TEAM</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="imgbox">
+
+                        </div>
+                        <div class="icon">
+                            <i class="fa-brands fa-square-twitter"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+
+                        </div>
+                        <div class="icon">
+                            <i class="fa-brands fa-square-twitter"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="imgbox">
+
+                        </div>
+                        <div class="icon">
+                            <i class="fa-brands fa-square-twitter"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="row"></div>
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
