--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-
+        
     </header>
     <main>
         <section id="welcome">
@@ -226,45 +226,111 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="imgbox">
-
-                        </div>
-                        <div class="icon">
-                            <i class="fa-brands fa-square-twitter"></i>
-                            <i class="fa-brands fa-square-facebook"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox ">
+                                <img src="assets/a.jpg" alt="">
+                            </div>
+                            <div class="textbox text-center">
+                                <h2>Parveen Anand</h2>
+                                <h4>Lead Designer</h4>
+                            </div>
+                            <div class="icon d-flex justify-content-center">
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="imgbox">
-
-                        </div>
-                        <div class="icon">
-                            <i class="fa-brands fa-square-twitter"></i>
-                            <i class="fa-brands fa-square-facebook"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/b.jpg" alt="">
+                            </div>
+                            <div class="textbox text-center">
+                                <h2>Diana Petersen</h2>
+                                <h4>Lead Marketer</h4>
+                            </div>
+                            <div class="icon d-flex justify-content-center">
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="imgbox">
-
-                        </div>
-                        <div class="icon">
-                            <i class="fa-brands fa-square-twitter"></i>
-                            <i class="fa-brands fa-square-facebook"></i>
-                            <i class="fa-brands fa-linkedin"></i>
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/c.jpg" alt="">
+                            </div>
+                            <div class="textbox text-center">
+                                <h2>Larry Parker</h2>
+                                <h4>Lead Developer</h4>
+                            </div>
+                            <div class="icon d-flex justify-content-center">
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                                <div class="icon-circle">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row"></div>
-            </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="textbox textwdth">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam
+                                veritatis, quos
+                                non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                        </div>
+                    </div>
+                </div>
         </section>
         <section></section>
         <section></section>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-between">
+                    <div class="textb">
+                        <h1>Copyright © Your Website 2023</h1>
+                    </div>
+                    <div class="icon d-flex justify-content-center">
+                        <div class="icon-circle">
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                        <div class="icon-circle">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </div>
+                        <div class="icon-circle">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </div>
+                    </div>
+                    <div class="textbox d-flex">
+                        <h2>Privacy Policy</h2>
+                        <h3>Terms of Use</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
