--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
 
 <body>
     <header>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="menu d-flex justify-content-between align-items-center">
+                        <div class="imgbox">
+                            <img src="assets/navbar-logo.svg" alt="">
+                        </div>
+                        <nav>
+                            <a href="#">SERVICES</a>
+                            <a href="#">PORTFOLIO</a>
+                            <a href="#">ABOUT</a>
+                            <a href="#">TEAM</a>
+                            <a href="#">CONTACT</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <section id="welcome">
@@ -303,8 +320,69 @@
                     </div>
                 </div>
         </section>
-        <section></section>
-        <section></section>
+        <section id="micro">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                        <div class="imgbox">
+                            <img src="assets/microsoft.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                        <div class="imgbox imgw">
+                            <img src="assets/google.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                        <div class="imgbox">
+                            <img src="assets/facebook.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                        <div class="imgbox imgw">
+                            <img src="assets/ibm.svg " alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="textbox">
+                            <h1>CONTACT US</h1>
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="box">
+                            <input type="text" placeholder="Your name*">
+                        </div>
+                        <div class="box">
+                            <input type="text" placeholder="Your Email*">
+                        </div>
+                        <div class="box">
+                            <input type="text" placeholder="Your Phone*">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="msgbox">
+                            <input type="text" placeholder="Your Message*">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="btn text-center">
+                            <h4>SEND MESSAGE</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
