--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
                         <div class="imgbox">
                             <img src="assets/navbar-logo.svg" alt="">
                         </div>
-                        <nav>
-                            <a href="#">SERVICES</a>
-                            <a href="#">PORTFOLIO</a>
-                            <a href="#">ABOUT</a>
-                            <a href="#">TEAM</a>
-                            <a href="#">CONTACT</a>
-                        </nav>
+                        <div class="navbar">
+                            <nav>
+                                <a href="#">SERVICES</a>
+                                <a href="#">PORTFOLIO</a>
+                                <a href="#">ABOUT</a>
+                                <a href="#">TEAM</a>
+                                <a href="#">CONTACT</a>
+                            </nav>
+                        </div>
+                        <div class="menu-button d-flex align-items-center">
+                            <h6>Menu</h6>
+                            <div class="icon">
+                                <i class="fa-solid fa-bars"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
