--- a/index.html
+++ b/index.html
@@ -69,39 +69,45 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </div>
-                        <div class="textbox">
-                            <h2>E-Commerce</h2>
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-                                quo inventore harum ex magni, dicta impedit.</h4>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <i class="fa-solid fa-laptop"></i>
-                        </div>
-                        <div class="textbox">
-                            <h2>Responsive Design</h2>
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-                                quo inventore harum ex magni, dicta impedit.</h4>
+                        <div class="box">
+                            <div class="icon d-flex justify-content-center align-items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </div>
+                            <div class="textbox">
+                                <h2>E-Commerce</h2>
+                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                    quo inventore harum ex magni, dicta impedit.</h4>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <i class="fa-solid fa-lock"></i>
+                        <div class="box">
+                            <div class="icon d-flex justify-content-center align-items-center">
+                                <i class="fa-solid fa-laptop"></i>
+                            </div>
+                            <div class="textbox">
+                                <h2>Responsive Design</h2>
+                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                    quo inventore harum ex magni, dicta impedit.</h4>
+                            </div>
                         </div>
-                        <div class="textbox">
-                            <h2>Web Security</h2>
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
-                                quo inventore harum ex magni, dicta impedit.</h4>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="icon d-flex justify-content-center align-items-center">
+                                <i class="fa-solid fa-lock"></i>
+                            </div>
+                            <div class="textbox">
+                                <h2>Web Security</h2>
+                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                    quo inventore harum ex magni, dicta impedit.</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="portfolio">
+        <!-- <section id="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="box">
@@ -166,8 +172,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section id="about">
+        </section> -->
+        <!-- <section id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -241,8 +247,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section id="team">
+        </section> -->
+        <!-- <section id="team">
             <div class="container">
                 <div class="row">
                     <div class="textbox text-center">
@@ -327,8 +333,8 @@
                         </div>
                     </div>
                 </div>
-        </section>
-        <section id="micro">
+        </section> -->
+        <!-- <section id="micro">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 d-flex justify-content-center align-items-center">
@@ -353,8 +359,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section id="contact">
+        </section> -->
+        <!-- <section id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
@@ -390,9 +396,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-between">
@@ -417,7 +423,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
