--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     <h1>SERVICES</h1>
                     <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div class="row text-center">
+                <div class="row">
                     <div class="col-md-4">
                         <div class="box">
                             <div class="icon d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </div>
-                            <div class="textbox">
+                            <div class="textbox text-center">
                                 <h2>E-Commerce</h2>
                                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
                                     quo inventore harum ex magni, dicta impedit.</h4>
@@ -85,7 +85,7 @@
                             <div class="icon d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-laptop"></i>
                             </div>
-                            <div class="textbox">
+                            <div class="textbox text-center">
                                 <h2>Responsive Design</h2>
                                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
                                     quo inventore harum ex magni, dicta impedit.</h4>
@@ -97,7 +97,7 @@
                             <div class="icon d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-lock"></i>
                             </div>
-                            <div class="textbox">
+                            <div class="textbox text-center">
                                 <h2>Web Security</h2>
                                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
                                     quo inventore harum ex magni, dicta impedit.</h4>
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section id="portfolio">
+        <section id="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="box">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="imgbox">
                             <img src="assets/11.jpg" alt="">
                         </div>
@@ -125,7 +125,7 @@
                             <h5>Illustration</h5>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="imgbox">
                             <img src="assets/21.jpg" alt="">
                         </div>
@@ -134,7 +134,7 @@
                             <h5>Graphic Design</h5>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="imgbox">
                             <img src="assets/31.jpg" alt="">
                         </div>
@@ -143,7 +143,7 @@
                             <h5>Identity</h5>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="imgbox">
                             <img src="assets/41.jpg" alt="">
                         </div>
@@ -152,7 +152,7 @@
                             <h5>Branding</h5>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="imgbox">
                             <img src="assets/5.jpg" alt="">
                         </div>
@@ -161,7 +161,7 @@
                             <h5>Website Design</h5>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="imgbox">
                             <img src="assets/6.jpg" alt="">
                         </div>
@@ -172,7 +172,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- <section id="about">
             <div class="container">
                 <div class="row">
@@ -248,7 +248,7 @@
                 </div>
             </div>
         </section> -->
-        <!-- <section id="team">
+        <section id="team">
             <div class="container">
                 <div class="row">
                     <div class="textbox text-center">
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 d-flex justify-content-center">
+                    <div class="col-lg-4 my-3 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox ">
                                 <img src="assets/a.jpg" alt="">
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-center">
+                    <div class="col-lg-4 my-3 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="assets/b.jpg" alt="">
@@ -301,7 +301,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-center">
+                    <div class="col-lg-4 my-3 d-flex justify-content-center">
                         <div class="box">
                             <div class="imgbox">
                                 <img src="assets/c.jpg" alt="">
@@ -333,34 +333,34 @@
                         </div>
                     </div>
                 </div>
-        </section> -->
-        <!-- <section id="micro">
+        </section>
+        <section id="micro">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3 d-flex justify-content-center align-items-center">
                         <div class="imgbox">
                             <img src="assets/microsoft.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3 d-flex justify-content-center align-items-center">
                         <div class="imgbox imgw">
                             <img src="assets/google.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3 d-flex justify-content-center align-items-center">
                         <div class="imgbox">
                             <img src="assets/facebook.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center align-items-center">
+                    <div class="col-md-3 col-sm-6 my-3 d-flex justify-content-center align-items-center">
                         <div class="imgbox imgw">
                             <img src="assets/ibm.svg " alt="">
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
-        <!-- <section id="contact">
+        </section>
+        <section id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
@@ -371,7 +371,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6">
                         <div class="box">
                             <input type="text" placeholder="Your name*">
                         </div>
@@ -382,7 +382,7 @@
                             <input type="text" placeholder="Your Phone*">
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-6">
                         <div class="msgbox">
                             <input type="text" placeholder="Your Message*">
                         </div>
@@ -396,34 +396,36 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
-    <!-- <footer>
+    <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 d-flex justify-content-between">
-                    <div class="textb">
-                        <h1>Copyright © Your Website 2023</h1>
-                    </div>
-                    <div class="icon d-flex justify-content-center">
-                        <div class="icon-circle">
-                            <i class="fa-brands fa-twitter"></i>
+                <div class="col-md-12 ">
+                    <div class="footer-content">
+                        <div class="textb">
+                            <h1>Copyright © Your Website 2023</h1>
                         </div>
-                        <div class="icon-circle">
-                            <i class="fa-brands fa-facebook-f"></i>
+                        <div class="icon d-flex justify-content-center">
+                            <div class="icon-circle">
+                                <i class="fa-brands fa-twitter"></i>
+                            </div>
+                            <div class="icon-circle">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </div>
+                            <div class="icon-circle">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </div>
                         </div>
-                        <div class="icon-circle">
-                            <i class="fa-brands fa-linkedin-in"></i>
+                        <div class="textbox d-flex">
+                            <h2>Privacy Policy</h2>
+                            <h3>Terms of Use</h3>
                         </div>
-                    </div>
-                    <div class="textbox d-flex">
-                        <h2>Privacy Policy</h2>
-                        <h3>Terms of Use</h3>
                     </div>
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
