--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
         <section id="services">
             <div class="container">
                 <div class="row">
-                    <h1>SERVICES</h1>
-                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    <div class="col-md-12">
+                        <h1>SERVICES</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -75,7 +77,8 @@
                             </div>
                             <div class="textbox text-center">
                                 <h2>E-Commerce</h2>
-                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                                    architecto
                                     quo inventore harum ex magni, dicta impedit.</h4>
                             </div>
                         </div>
@@ -87,7 +90,8 @@
                             </div>
                             <div class="textbox text-center">
                                 <h2>Responsive Design</h2>
-                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                                    architecto
                                     quo inventore harum ex magni, dicta impedit.</h4>
                             </div>
                         </div>
@@ -99,7 +103,8 @@
                             </div>
                             <div class="textbox text-center">
                                 <h2>Web Security</h2>
-                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto
+                                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                                    architecto
                                     quo inventore harum ex magni, dicta impedit.</h4>
                             </div>
                         </div>
@@ -173,81 +178,75 @@
                 </div>
             </div>
         </section>
-        <!-- <section id="about">
+        <section id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box text-center">
                             <h1>ABOUT</h1>
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Lorem ipsum doolr sit amet consectetur.</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex">
-                        <div class="textbox text-end">
-                            <h2>2009-2011</h2>
-                            <h4>Our Humble Beginnings</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</p>
+                    <div class="col-md-12 d-flex justify-content-center  flex-wrap">
+                        <div class="box d-flex justify-content-end">
+                            <div class="textbox">
+                                <h2>2009-2011</h2>
+                                <h4>Our Humble Beginnings</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                    incidunt et ea quo dolore laudantium consectetur!</p>
+                            </div>
+                            <div class="imgbox">
+                                <img src="assets/1.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="imgbox ">
-                            <img src="assets/1.jpg" alt="">
+                        <div class="box d-flex flex-row-reverse">
+                            <div class="textbox">
+                                <h2>March 2011</h2>
+                                <h4>An Agency is Born</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                    incidunt et ea quo dolore laudantium consectetur!</p>
+                            </div>
+                            <div class="imgbox">
+                                <img src="assets/2.jpg" alt="">
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 d-flex margSize">
-                        <div class="imgbox">
-                            <img src="assets/2.jpg" alt="">
+                        <div class="box d-flex">
+                            <div class="textbox">
+                                <h2>December 2015</h2>
+                                <h4>Transition to Full Service</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                    incidunt et ea quo dolore laudantium consectetur!</p>
+                            </div>
+                            <div class="imgbox">
+                                <img src="assets/3.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="textbox">
-                            <h2>March 2011</h2>
-                            <h4>An Agency is Born</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 d-flex">
-                        <div class="textbox text-end">
-                            <h2>December 2015</h2>
-                            <h4>Transition to Full Service</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</p>
-                        </div>
-                        <div class="imgbox ">
-                            <img src="assets/3.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 d-flex margSize">
-                        <div class="imgbox ">
-                            <img src="assets/4.jpg" alt="">
-                        </div>
-                        <div class="textbox">
-                            <h2>July 2020</h2>
-                            <h4>Phase Two Expansion</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
-                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
-                                incidunt et ea quo dolore laudantium consectetur!</p>
+                        <div class="box d-flex flex-row-reverse">
+                            <div class="textbox">
+                                <h2>July 2020</h2>
+                                <h4>Phase Two Expansion</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                    sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                    incidunt et ea quo dolore laudantium consectetur!</p>
+                            </div>
+                            <div class="imgbox">
+                                <img src="assets/4.jpg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-center">
-                        <div class="circle d-flex justify-content-center align-items-center">
-                            <h6>Be part of our story</h6>
-                        </div>
+                    <div class="col-md-12">
+
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <section id="team">
             <div class="container">
                 <div class="row">
