--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-center  flex-wrap">
-                        <div class="box d-flex justify-content-end">
+                    <div class="col-md-12 ">
+                        <div class="box d-flex">
                             <div class="textbox">
                                 <h2>2009-2011</h2>
                                 <h4>Our Humble Beginnings</h4>
