--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box text-center">
-                            <h1>ABOUT</h1>
+                            <h1>AbOUT</h1>
                             <h3>Lorem ipsum doolr sit amet consectetur.</h3>
                         </div>
                     </div>
