--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="imgbox">
                             <img src="assets/11.jpg" alt="">
                         </div>
@@ -130,7 +130,7 @@
                             <h5>Illustration</h5>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="imgbox">
                             <img src="assets/21.jpg" alt="">
                         </div>
@@ -139,7 +139,7 @@
                             <h5>Graphic Design</h5>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="imgbox">
                             <img src="assets/31.jpg" alt="">
                         </div>
@@ -148,7 +148,7 @@
                             <h5>Identity</h5>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="imgbox">
                             <img src="assets/41.jpg" alt="">
                         </div>
@@ -157,7 +157,7 @@
                             <h5>Branding</h5>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="imgbox">
                             <img src="assets/5.jpg" alt="">
                         </div>
@@ -166,7 +166,7 @@
                             <h5>Website Design</h5>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="imgbox">
                             <img src="assets/6.jpg" alt="">
                         </div>
