--- a/index.html
+++ b/index.html
@@ -115,64 +115,96 @@
         <section id="portfolio">
             <div class="container">
                 <div class="row">
-                    <div class="box">
-                        <h1>PORTFOLIO</h1>
-                        <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+                    <div class="col-md-12">
+                        <div class="textbox text-center">
+                            <h1>PORTFOLIO</h1>
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="imgbox">
-                            <img src="assets/11.jpg" alt="">
-                        </div>
-                        <div class="textbox ">
-                            <h2>TREADS</h2>
-                            <h5>Illustration</h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="imgbox">
-                            <img src="assets/21.jpg" alt="">
-                        </div>
-                        <div class="textbox ">
-                            <h2>EXPLORE</h2>
-                            <h5>Graphic Design</h5>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/5.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Threads</h2>
+                                <h4>Illustration</h4>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="imgbox">
-                            <img src="assets/31.jpg" alt="">
-                        </div>
-                        <div class="textbox ">
-                            <h2>FINISH</h2>
-                            <h5>Identity</h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="imgbox">
-                            <img src="assets/41.jpg" alt="">
-                        </div>
-                        <div class="textbox ">
-                            <h2>LINES</h2>
-                            <h5>Branding</h5>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/6.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Explore</h2>
+                                <h4>Graphic Design</h4>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="imgbox">
-                            <img src="assets/5.jpg" alt="">
-                        </div>
-                        <div class="textbox ">
-                            <h2>SOUTHWEST</h2>
-                            <h5>Website Design</h5>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/11.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Finish</h2>
+                                <h4>Identity</h4>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="imgbox">
-                            <img src="assets/6.jpg" alt="">
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/21.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Lines</h2>
+                                <h4>Branding</h4>
+                            </div>
                         </div>
-                        <div class="textbox ">
-                            <h2>Window</h2>
-                            <h5>Photography</h5>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/31.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Southwest</h2>
+                                <h4>Website Design</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex justify-content-center">
+                        <div class="box">
+                            <div class="imgbox">
+                                <img src="assets/41.jpg" alt="">
+                                <div class="icon">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="textbox">
+                                <h2>Window</h2>
+                                <h4>Photography</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -182,15 +214,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="box text-center">
-                            <h1>AbOUT</h1>
-                            <h3>Lorem ipsum doolr sit amet consectetur.</h3>
+                        <div class="text-center">
+                            <h1>ABOUT</h1>
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 ">
-                        <div class="box d-flex">
+                    <div class="col-md-12">
+                        <div class="box">
                             <div class="textbox">
                                 <h2>2009-2011</h2>
                                 <h4>Our Humble Beginnings</h4>
@@ -202,7 +234,10 @@
                                 <img src="assets/1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="box d-flex flex-row-reverse">
+                        <div class="box right justify-content-end">
+                            <div class="imgbox">
+                                <img src="assets/2.jpg" alt="">
+                            </div>
                             <div class="textbox">
                                 <h2>March 2011</h2>
                                 <h4>An Agency is Born</h4>
@@ -210,11 +245,8 @@
                                     sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
                                     incidunt et ea quo dolore laudantium consectetur!</p>
                             </div>
-                            <div class="imgbox">
-                                <img src="assets/2.jpg" alt="">
-                            </div>
                         </div>
-                        <div class="box d-flex">
+                        <div class="box">
                             <div class="textbox">
                                 <h2>December 2015</h2>
                                 <h4>Transition to Full Service</h4>
@@ -226,23 +258,27 @@
                                 <img src="assets/3.jpg" alt="">
                             </div>
                         </div>
-                        <div class="box d-flex flex-row-reverse">
-                            <div class="textbox">
+                        <div class="box right justify-content-end">
+                            <div class="imgbox">
+                                <img src="assets/4.jpg" alt="">
+                            </div>
+                            <div class="textbox text-start">
                                 <h2>July 2020</h2>
                                 <h4>Phase Two Expansion</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
                                     sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
                                     incidunt et ea quo dolore laudantium consectetur!</p>
                             </div>
-                            <div class="imgbox">
-                                <img src="assets/4.jpg" alt="">
-                            </div>
                         </div>
-                    </div>
+                    </div>                  
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-
+                    <div class="col-md-12 d-flex yellow">
+                        <div class="story d-flex">
+                            <div class="minibox d-flex align-items-center">
+                                <h2>Be Part Of Our Story!</h2>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
